<resources>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Sign up.</string>
    <string name="btn_link_to_login">Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="change_profile">Change profile</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="already_registered">Already registered?</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="save">Save</string>
    <string name="tap_on_camera_to_choose_profile_picture">Tap on camera to choose profile picture</string>
    <string name="app_name">SplitShare</string>
    <string name="add">ADD</string>
    <string name="enter_name">Enter name</string>
    <string name="next">NEXT</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="inr_paid">INR paid</string>
    <string name="ok">Ok</string>
    <string name="enter_amount_paid">Enter amount paid:</string>
    <string name="amount">Amount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
